--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="PrintPress - Pinterest Image Fetcher"
     />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' 'sha256-kPx0AsF0oz2kKiZ875xSvv693TBHkQ/0SkMJZnnNpnQ=' chrome-extension://4790d88f-43ab-41a1-a570-f6d04bc6dcb0/; object-src 'none'; base-uri 'self';"
+    />
     <title>PrintPress - Pinterest Image Gallery</title>
   </head>
   <body>
